--- a/notebooks/Regression Discontinuity.ipynb
+++ b/notebooks/Regression Discontinuity.ipynb
@@ -5,7 +5,11 @@
    "id": "2ea723ff-c432-481b-9a07-ed3ca7c6ea79",
    "metadata": {},
    "source": [
-    "# apyxl vs Regression Discontinuity Design\n",
+    "### apyxl for Econometrics Tasks\n",
+    "\n",
+    "This notebook is part of a series demonstrating that gradient boosting regression combined with SHAP analysis can advantageously replace traditional econometric techniques. This approach benefits from non-linear relationships between outputs and inputs, the ability to capture interactions among different inputs, and the robustness of SHAP analysis in handling imbalanced data distributions and cross-correlations.\n",
+    "\n",
+    "# Regression Discontinuity Design\n",
     "\n",
     "In this notebook, we will compare two approaches to causal inference: the traditional [Regression Discontinuity Design](https://en.wikipedia.org/wiki/Regression_discontinuity_design) (RDD) and a machine learning-based method implemented in the `apyxl` package, which integrates XGBoost with SHAP analysis.\n",
     "\n",
@@ -36,7 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from apyxl import XGBRegressorWrapper"
    ]
